<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/MainMenu">

    <fragment
            android:id="@+id/FirstFragment"
            android:name="com.example.myfirstapp.ui.NumberFragment"
            android:label="@string/first_fragment_label"
            tools:layout="@layout/fragment_first">
    </fragment>
    <fragment
            android:id="@+id/SecondFragment"
            android:name="com.example.myfirstapp.ui.TicTacToeFragment"
            android:label="@string/second_fragment_label"
            tools:layout="@layout/fragment_second">

        <action
                android:id="@+id/action_SecondFragment_to_MainMenu"
                app:destination="@id/MainMenu"/>
    </fragment>

    <fragment
            android:id="@+id/MainMenu"
            android:name="com.example.myfirstapp.ui.MainMenuFragment"
            android:label="@string/main_menu_label"
            tools:layout="@layout/fragment_main_menu">

        <action
                android:id="@+id/action_MainMenu_to_FirstFragment"
                app:destination="@id/FirstFragment"/>
        <action
            android:id="@+id/action_MainMenu_to_SecondFragment"
            app:destination="@+id/SecondFragment"/>
    </fragment>
</navigation>